--- a/Yongjin_student.html
+++ b/Yongjin_student.html
@@ -76,7 +76,7 @@ type=text/css rel=stylesheet>
                   </tr>
                   <tr class="txt">
                   <td width="70%" valign="top">
-                        <a href="https://cg.cs.tsinghua.edu.cn/people/~Yongjin/Yongjin.htm"> &#22238;&#21040;&#20027;&#39029; </a>
+                        <a href="https://yongjinliu.github.io/"> &#22238;&#21040;&#20027;&#39029; </a>
                         
                   </td>
                   </tr>
